test/errhandling/ferguson/err-return.1.good
Error: test error
  err-return.chpl:23: thrown here
